--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-theme": "^1.2.6",
     "react-scroll": "^1.9.0",
     "resend": "^3.1.0",
+    "sharp": "^0.33.2",
     "sonner": "^1.4.0",
     "swiper": "^11.0.6",
     "zod": "^3.22.4"
