--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
+    "cssnano": "^6.1.0",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "^18",
